--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ repository: https://github.com/sidha6th/to_sqlite
 environment:
   sdk: ^3.4.3
 
-executables: bin/to_sqlite.dart
+executables:
+  toSqlite: to_sqlite
 
 dependencies:
   args: ^2.5.0
@@ -27,5 +28,3 @@ dev_dependencies:
   dart_flutter_team_lints: ^2.1.1
   lints: ^3.0.0
   test: ^1.24.0
-
-license: MIT
