--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,10 @@ executables:
 
 dependencies:
   args: ^2.5.0
-  collection: ^1.19.0
+  collection: ^1.18.0
   path: ^1.9.0
   sqlite3: ^2.4.6
+  sqlite3_flutter_libs: ^0.5.25
 
 dev_dependencies:
   dart_flutter_team_lints: ^2.1.1
